Added H2 in body

--- a/helloworld2.html
+++ b/helloworld2.html
@@ -5,6 +5,7 @@
 </head>
 <<header><h2>Hello! Welcome to my WEB PAGE!</h2></header>
 <body>
-  <h1>Still just testing!</h1>
+  <h2>Still just testing!</h2>
+  <h1>just figuring things out</>
 </body>
 </html>
