--- a/helloworld2.html
+++ b/helloworld2.html
@@ -3,9 +3,10 @@
 <head>
   <title>Hello World 2</title>
 </head>
-<<header><h2>Hello! Welcome to my WEB PAGE!</h2></header>
+<<header><h2>Hello! Welcome to my ROOKIE WEB PAGE!</h2></header>
 <body>
   <h2>Still just testing!</h2>
-  <h1>just figuring things out</>
+  <h1>just figuring things out</h1>
+  <h2>just figuring things out</h2>
 </body>
 </html>
